# cmake_ubuntu_test

./: README.md
1-test/: CMakeLists.txt  Makefile  main.cpp
10-test/: CMakeLists.txt  main.cpp
11-test/: test.thrift
11-test/demo/: CMakeLists.txt  HelloWorldService.cpp  HelloWorldService.h  main.cpp  test_constants.cpp  test_constants.h  test_types.cpp  test_types.h
2-test/: CMakeLists.txt  main.cpp
3-test/: CMakeLists.txt  sumfun.h
4-test/: CMakeLists.txt  main.cpp
4-test/sub1/: sumfun.cpp
5-test/: CMakeLists.txt  main.cpp
5-test/sub1/: CMakeLists.txt
6-test/: CMakeLists.txt
6-test/sub1/: CMakeLists.txt
7-test/: CMakeLists.txt  config.h.in  main.cpp
8-test/: CMakeLists.txt  config.h.in  main.cpp
8-test/sub1/: sumfun.cpp
9-test/: CMakeLists.txt  License.txt
